kubernetes_deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operations-engineering-reports
  namespace: operations-engineering
spec:
  replicas: 3
  selector:
    matchLabels:
      app: operations-engineering-reports-app
  template:
    metadata:
      labels:
        app: operations-engineering-reports-app
    spec:
      containers:
        - name: operations-engineering-reports
          image: ministryofjustice/operations-engineering-reports:1.0
          ports:
          - containerPort: 4567
