kubernetes_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operations-engineering-reports-service
  labels:
    app: operations-engineering-reports-service
spec:
  ports:
    - port: 4567
      name: https
      targetPort: 4567
  selector:
    app: operations-engineering-reports-app
